# tree-sitter-toml

./: Cargo.toml
bindings/rust/: build.rs
